Refactoring method add and get to ms-cinema-rest