@@ -2,36 +2,38 @@ package com.pe.web.cine.app.builder;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import com.pe.web.cine.app.dto.request.RoomRequest;
-import com.pe.web.cine.app.dto.response.InfoCinema;
-import com.pe.web.cine.app.dto.response.RoomResponse;
-import com.pe.web.cine.app.dto.response.SeatResponse;
 import com.pe.web.cine.app.entity.Cinema;
 import com.pe.web.cine.app.entity.Room;
 import com.pe.web.cine.app.entity.Seat;
+import com.pe.web.cine.app.model.InfoCinema;
+import com.pe.web.cine.app.model.RoomRequest;
+import com.pe.web.cine.app.model.RoomResponse;
+import com.pe.web.cine.app.model.SeatResponse;
 import com.pe.web.cine.app.utilitario.Constants;
 import com.pe.web.cine.app.utilitario.Util;
 
 public class ConvertBuilderRoom {
 
 	public RoomResponse convertToRoomResponse(Room room,List<Seat> listSeat) {
-		return RoomResponse.builder()
-				.codRoom(room.getCodRoom())
-				.creationDate(Util.convertToStringDate(room.getCreationDate()))
-				.infoCinema(InfoCinema.builder()
-						.codCinema(room.getCinema().getCodCinema())
-						.name(room.getCinema().getName())
-						.build())
-				.numRoom(room.getNumRoom())
-				.numRow(room.getNumRow())
-				.numSeat(room.getNumSeat())
-				.listSeat(convertToListSeatResponse(listSeat))
-				.build();
+		
+	  InfoCinema infoCinema = new InfoCinema();
+	  infoCinema.setCodCinema(room.getCinema().getCodCinema());
+	  infoCinema.setName(room.getCinema().getName());
+	  
+	  RoomResponse roomResponse = new RoomResponse();
+	  roomResponse.setCodRoom(room.getCodRoom());
+	  roomResponse.setCreationDate(Util.convertToStringDate(room.getCreationDate()));
+	  roomResponse.setInfoCinema(infoCinema);
+	  roomResponse.setNumRoom(room.getNumRoom());
+	  roomResponse.setNumRow(room.getNumRow());
+	  roomResponse.setNumSeat(room.getNumSeat());
+	  roomResponse.setListSeat(convertToListSeatResponse(listSeat));
+	  return roomResponse;
+	  
 	}
-	
-	public Room convertToRoomEntity(RoomRequest roomRequest) {
+
+  	public Room convertToRoomEntity(RoomRequest roomRequest) {
 		return Room.builder()
 				.creationDate(LocalDateTime.now())
 				.cinema(convertToCinema(roomRequest))
@@ -42,19 +44,25 @@ public class ConvertBuilderRoom {
 				.build();
 	}
 	
-	public List<SeatResponse> convertToListSeatResponse(List<Seat> listSeat){
-		return listSeat.stream().map(seat->
-						SeatResponse.builder()
-						.codSeat(seat.getCodSeat())
-						.positionRow(seat.getPositionRow())
-						.positionColumn(seat.getPositionColumn())
-						.statusSeat(seat.getStatusSeat()?
-								Constants.STRING_DISPONIBLE:Constants.STRING_RESERVADO)
-						.build())
-				.collect(Collectors.toList());
+ 
+  	public List<SeatResponse> convertToListSeatResponse(List<Seat> listSeat){
+		return listSeat.stream()
+				.map(seat -> convertToSeatResponse(seat))
+				.toList();
+				
 	}
+  
+  	private SeatResponse convertToSeatResponse(Seat seat) {
+	  SeatResponse seatResponse = new SeatResponse();
+	  seatResponse.setCodSeat(seat.getCodSeat());
+	  seatResponse.setPositionRow(seat.getPositionRow());
+	  seatResponse.setPositionColumn(seat.getPositionColumn());
+	  seatResponse.setStatusSeat(seat.getStatusSeat()?
+				Constants.STRING_DISPONIBLE:Constants.STRING_RESERVADO);
+	  return seatResponse;
+  	}
 	
-	public Cinema convertToCinema(RoomRequest roomRequest) {
+  	private Cinema convertToCinema(RoomRequest roomRequest) {
 		return Cinema.builder()
 				.codCinema(roomRequest.getCodCinema())
 				.build();
